# carolina-flavor-book

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  INSTALL.md  Justfile  README.md  Taskfile.yml  cloudflared.yml  gk-server.service  pyproject.toml  recipe.json
.claude/: retag-continuation.md
.claude/agent-memory/recipe-generator/: MEMORY.md  db-contents-archive.md
.claude/agents/: recipe-generator.md  recipe-tagger.md  recipe-writer.md
book/: book.toml
book/src/: SUMMARY.md
book/src/desserts/: 7up Cake.md  Apple Dumplings.md  Apple Pan Dowdy.md  Apricot Nectar Cake.md  Banana Split Cake.md  Butterscotch Pie.md  Chocolate Chip Cake.md  Coca Cola Cake.md  Coconut Cream Cake.md  Coconut Pecan Filling and Frosting.md  Coconut Pecan Frosting.md  Daisy Oatmeal Cake.md  Festive Fudge.md  Fresh Apple Cake.md  Fruit and Nuts Granola Bar.md  German Chocolate Cake.md  Graham Cracker Pie.md  Grape Juice Pie.md  Hot Fudge Cake.md  Lazy Daisy Cake.md  Orange Cake.md  Peanut Butter Fudge.md  Pumpkin Goodies.md  Pumpkin Pie Filling.md  Raisin Pie.md  Seven Layer Goodies.md  Strawberry Pi.md  Turtle Cake.md  Watergate Cake.md
book/src/desserts-contrib/: Blueberry Bar Cookies.md  Blueberry Oatmeal Cookies.md  Blueberry Peach Cobbler.md  Blueberry Peach Coffee Cake.md  Coconut Pecan Filling and Frosting.md  Coconut Pecan Frosting.md  German Chocolate Cake.md  Raspberry Strussel Muffins.md
config/: dev.toml  dev.yml
diffusion-project/: API_REFERENCE.md  COMFY_PLAN.txt  DEBUGGING_LOG.md  main.py  pyproject.toml
diffusion-project/scripts/: edit_client.py
diffusion-project/src/diffusion_example/: __init__.py  comfy_bridge.py  main.py  server.py
diffusion-project/src/diffusion_example/static/: index.html
docs/: agent-workflow.md
docs/plans/: 2026-03-03-content-pipeline-design.md  2026-03-03-m1-m2-implementation.md
gk/: Cargo.toml
gk-client/: Cargo.toml
gk-client/src/ingestion/: illustrate.rs  llm.rs  mod.rs  ocr.rs  scan_cropping.rs  webcam.rs
gk-client/src/prompts/: cleanup-ocr.md  freestyle.md  generate-scenes.md  recipes.list.txt
gk-content/: Cargo.toml
gk-content/src/: client.rs  gaps.rs  grid.rs  ingest.rs  lib.rs  main.rs
gk-content/tests/: integration.rs
gk-server/: Cargo.toml  launch-in-prod-docker.sh
gk-server/src/: auth.rs  cache.rs  config.rs  database.rs  errors.rs  lib.rs  main.rs  models.rs  opencv_ext.rs  storage.rs
gk-server/src/auth/: mod.rs  route.rs  session.rs
gk-server/src/migrations/: 01-initial.sql  02-embeddings.sql  04-tasks.sql  06-names-are-revisions.sql  07-image-extra-index.sql  08-image-prompts.sql  08-users.sql  09-front-page-sections.sql  10-recipe-description.sql  11-articles.sql
gk-server/src/search/: mod.rs  model.rs
gk-server/src/templates/: search.hbs
gk-server/static/: index.css
gk-server/templates/: article.html.jinja  articles.html.jinja  base.html.jinja  browse-by-tag.html.jinja  create-recipe.html.jinja  index.html.jinja  login-required.html.jinja  login.html.jinja  recipe.html.jinja  search.html.jinja
gk-server/tests/: auth.rs  database.rs  pure_functions.rs  routes.rs
gk-server/tests/common/: mod.rs
gk/src/: basic_models.rs  lib.rs
gk/src/ingestion/: illustrate.rs  mod.rs
gk/src/prompts/: cleanup-ocr.md  existing-recipes.txt.md  recipes.list.txt.bak
scripts/: classify-recipes.py
src/: auth.rs  database.rs  errors.rs  ingestion.rs  lib.rs  main.rs  models.rs  scan-to-markdown.py
src/ingestion/: ocr.rs  webcam.rs
src/migrations/: 01-initial.sql  02-embeddings.sql  03-repair-revisions.sql  05-add-indexes.sql
src/prompts/: cleanup-ocr.md  generate-scenes.md
src/search/: mod.rs  model.rs
src/static/: index.css
src/templates/: header.hbs  index.hbs  recipe.hbs  search.hbs
static/: index.css
