[package]
name = "recipes"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-openai = "0.23.4"
env_logger = "0.11.5"
glob = "0.3.1"
image = "0.25.2"
imageproc = "0.25.0"
lazy_static = "1.5.0"
log = "0.4.22"
ndarray = "0.16.1"
ocrs = "0.8.0"
tempfile = "3.12.0"
tokio = { version = "1.39.3", features = ["full"] }
tokio-retry = "0.3.0"
url-escape = "0.1.1"
webp = "0.3.0"
rustronomy-watershed = { git = "https://github.com/SeanTater/rustronomy-watershed.git", branch="feature/colored-segmenting-watershed"}
axum = { version = "0.7.5", features = ["multipart"] }
tracing-subscriber = "0.3.18"
rusqlite = { version = "0.32.1", features = ["bundled"] }
handlebars = "6.0.0"
serde = "1.0.209"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
thiserror = "1.0.63"
base64 = "0.22.1"
axum_static = "1.7.1"
serde_json = "1.0.127"
markdown = "1.0.0-alpha.20"
itertools = "0.13.0"
rand = "0.8.5"
chrono = "0.4.38"
tracing = "0.1.40"
fastembed = { version = "4.0.0", default-features = false, features = ["ort-download-binaries"] }
half = { version = "2.4.1", features = ["serde", "zerocopy"] }
zerocopy = "0.7.35"
candle-core = "0.6.0"
strum = { version = "0.26.3", features = ["derive"] }
dotenvy = "0.15.7"
axum-server = { version = "0.7.1", features = ["rustls", "tls-rustls"] }
rustls = { version = "0.23.12", features = ["ring"] }
async-trait = "0.1.82"
sha2 = "0.10.8"
hex = "0.4.3"
clap = { version = "4.5.17", features = ["derive"] }
bincode = "1.3.3"
reqwest = { version = "0.12.7", features = ["rustls-tls"], default-features = false }
v4l = "0.14.0"
rten = "0.13.1"
tower-http = { version = "0.5.2", features = ["compression-br"] }
