[workspace]
members = ["gk", "gk-client", "gk-server", "gk-content"]
resolver = "2"
default-members = ["gk-server"]

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.8", features = ["multipart"] }
axum-server = { version = "0.7.1", features = ["rustls", "tls-rustls"] }# Server only
base64 = "0.22.1"
bincode = "1.3.3"
candle-core = "0.9.2"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
fastembed = { version = "5.11.0", default-features = false, features = ["ort-download-binaries"] }

glob = "0.3.2"
half = { version = "2.7.1", features = ["serde", "zerocopy"] }
hex = "0.4.3"
image = "0.25.6"
imageproc = "0.25.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.27"
markdown = "1.0.0-alpha.21"
r2d2 = { version = "0.8.10" }# Server only
r2d2_sqlite = { version = "0.25.0" }# Server only
rand = "0.8.5"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }

rusqlite = { version = "0.32.1", features = ["bundled"] }
rustls = { version = "0.23.28", features = ["ring"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.44.2", features = ["full"] }
tokio-retry = "0.3.0"

tower-http = { version = "0.6.8", features = ["compression-br"] }# Server only
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url-escape = "0.1.1"


webp = "0.3.0"

async-openai = { version = "0.23.4" } # Local only


tempfile = { version = "3.19.1" } # Local only
v4l = { version = "0.14.0" } # Local only
