[tool.poetry]
name = "recipes"
version = "0.1.0"
description = "Scripts for scanning recipes"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
rembg = { version = "^2.0.58", extras = ["cli"] }
numpy = "<2"
opencv-python = "^4.10.0.84"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
