[package]
name = "gk-client"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-openai.workspace = true
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
candle-core = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenvy.workspace = true
env_logger = { workspace = true }
fastembed = { workspace = true, default-features = false, features = ["ort-download-binaries"] }
gk = { path = "../gk" }
glob = { workspace = true }
half = { workspace = true, features = ["serde", "zerocopy"] }
handlebars = { workspace = true }
hex = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
markdown = { workspace = true }
ndarray = { workspace = true } # Local only
ocrs = { workspace = true } # Local only
rand = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"], default-features = false }

rten = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
rustls = { workspace = true, features = ["ring"] }
rustronomy-watershed = {  workspace = true }  # Local only
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true } # Local only
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-retry = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url-escape = { workspace = true }

v4l = { workspace = true } # Local only
webp = { workspace = true }
zerocopy = { workspace = true }
