[package]
name = "gk-server"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { features = ["multipart"], workspace = true }
axum-server = { features = ["rustls", "tls-rustls"], workspace = true }# Server only
axum_static = { workspace = true }# Server only
base64 = { workspace = true }
bincode = { workspace = true }
candle-core = { workspace = true }
chrono = { workspace = true }
clap = { features = ["derive"], workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
fastembed = { default-features = false, features = ["ort-download-binaries"], workspace = true }
gk = { path = "../gk" }
glob = { workspace = true }
half = { features = ["serde", "zerocopy"], workspace = true }
handlebars = { workspace = true }
hex = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
markdown = { workspace = true }
r2d2 = { workspace = true }# Server only
r2d2_sqlite = { workspace = true }# Server only
rand = { workspace = true }
reqwest = { features = ["rustls-tls"], default-features = false, workspace = true }

rten = { workspace = true }
rusqlite = { features = ["bundled"], workspace = true }
rustls = { features = ["ring"], workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { features = ["derive"], workspace = true }
thiserror = { workspace = true }
tokio = { features = ["full"], workspace = true }
tokio-retry = { workspace = true }

tower-http = { features = ["compression-br"], workspace = true }# Server only
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url-escape = { workspace = true }

webp = { workspace = true }
zerocopy = { workspace = true }
