[package]
name = "gk-server"
version = "0.2.7"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { features = ["http2", "macros", "multipart"], workspace = true }
axum-extra = { version = "0.9.4", features = ["cookie"] }
axum-server = { features = ["rustls", "tls-rustls"], workspace = true }# Server only
base64 = { workspace = true }
bincode = { workspace = true }
candle-core = { workspace = true }
chrono = { workspace = true }
clap = { features = ["derive"], workspace = true }
crypto-bigint = "0.5.5"
env_logger = { workspace = true }
fastembed = { default-features = false, features = ["ort-download-binaries"], workspace = true }
gk = { path = "../gk" }
glob = { workspace = true }
google-cloud-storage = { workspace = true }
half = { features = ["serde", "zerocopy"], workspace = true }
hex.workspace = true
image = { workspace = true }
imageproc = { workspace = true }
include_dir = "0.7.4"
itertools = { workspace = true }
jsonwebtoken = "9.3.0"
lazy_static = { workspace = true }
log = { workspace = true }
markdown = { workspace = true }
minijinja = "2.3.1"
oauth2 = "4.4.2"
r2d2 = { workspace = true }# Server only
r2d2_sqlite = { workspace = true }# Server only
rand = { workspace = true }
regex = "1.10.6"
reqwest = { features = ["rustls-tls"], default-features = false, workspace = true }

rten = { workspace = true }
rusqlite = { features = ["bundled"], workspace = true }
rustls = { features = ["ring"], workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
strum = { features = ["derive"], workspace = true }
thiserror = { workspace = true }
tokio = { features = ["full"], workspace = true }
tokio-retry = { workspace = true }

tower-http = { features = ["compression-br", "trace"], workspace = true }# Server only
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { features = ["json", "env-filter", "tracing-log"], workspace = true }
url-escape = { workspace = true }

webp = { workspace = true }
