[package]
name = "gk"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-openai = { version = "0.23.4", optional = true } # Local only
async-trait = "0.1.82"
axum = { version = "0.7.5", features = ["multipart"], optional = true } # Local only
axum-server = { version = "0.7.1", features = ["rustls", "tls-rustls"], optional = true }# Server only
axum_static = { version = "1.7.1", optional = true }# Server only
base64 = "0.22.1"
bincode = "1.3.3"
candle-core = "0.6.0"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
fastembed = { version = "4.0.0", default-features = false, features = ["ort-download-binaries"] }
glob = "0.3.1"
half = { version = "2.4.1", features = ["serde", "zerocopy"] }
handlebars = "6.0.0"
hex = "0.4.3"
image = "0.25.2"
imageproc = "0.25.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
markdown = "1.0.0-alpha.20"
ndarray = { version = "0.16.1", optional = true } # Local only
ocrs = { version = "0.8.0", optional = true } # Local only
r2d2 = { version = "0.8.10", optional = true }# Server only
r2d2_sqlite = { version = "0.25.0", optional = true }# Server only
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["rustls-tls"], default-features = false }

rten = "0.13.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustls = { version = "0.23.12", features = ["ring"] }
rustronomy-watershed = { git = "https://github.com/SeanTater/rustronomy-watershed.git", branch = "feature/colored-segmenting-watershed", optional = true }  # Local only
serde = "1.0.209"
serde_json = "1.0.127"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = { version = "3.12.0", optional = true } # Local only
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tokio-retry = "0.3.0"

tower-http = { version = "0.5.2", features = ["compression-br"], optional = true }# Server only
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url-escape = "0.1.1"


v4l = { version = "0.14.0", optional = true } # Local only
webp = "0.3.0"
zerocopy = "0.7.35"

[features]
local = ["dep:v4l", "dep:rustronomy-watershed", "dep:async-openai", "dep:ocrs", "dep:ndarray", "dep:tempfile", "dep:axum"]
server = ["dep:tower-http", "dep:axum-server", "dep:r2d2_sqlite", "dep:r2d2", "dep:axum_static"]
