[package]
name = "gk"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
dotenvy.workspace = true
lazy_static.workspace = true
reqwest.workspace = true
serde = {workspace = true, features=["derive"]}
serde_json.workspace = true
tracing.workspace = true
